# reqwest-graphql

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs
tests/: errors.rs  queries.rs  structs.rs
