[package]
name = "reqwest-graphql"
version = "1.0.0"
edition = "2021"
description = "Minimal GraphQL client for Rust"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }